# fiap-soat-video-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test-and-deploy.yaml
k8s/: README.md
k8s/base/: configmap-app.yaml  deployment-api.yaml  hpa-api.yaml  kustomization.yaml  secret-app.yaml  service-api.yaml
k8s/overlays/local-dev/: kustomization.yaml  patch-configmap-app.yaml  patch-service-api-nodeport.yaml
src/video_service/: __init__.py
src/video_service/application/ports/: __init__.py
src/video_service/application/ports/output/: __init__.py  event_publisher.py  storage_service.py
src/video_service/application/ports/output/repositories/: __init__.py  (+1 more)
src/video_service/application/use_cases/: __init__.py  get_video.py  list_videos.py  upload_video.py
src/video_service/domain/: __init__.py
src/video_service/domain/entities/: __init__.py  video.py
src/video_service/infrastructure/adapters/: __init__.py
src/video_service/infrastructure/adapters/input/: __init__.py
src/video_service/infrastructure/adapters/output/: __init__.py
src/video_service/infrastructure/config/: __init__.py  settings.py
tests/: __init__.py  conftest.py
tests/integration/api/: test_main.py  test_routes.py
tests/unit/application/use_cases/: test_get_video.py  test_list_videos.py  test_upload_video.py
tests/unit/domain/: test_video_entity.py
tests/unit/infrastructure/input/api/: test_dependencies.py
tests/unit/infrastructure/output/: test_database_and_models.py  test_sqlalchemy_video_repository.py  test_storage_and_publishers.py
(+17 files in other folders)
